<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Widgets</string>
    <string name="action_settings">Settings</string>
    <string name="str_text_view">Str Hello world!</string>
    <string name="str_button">Check items</string>
    <string name="str_button_descr">pokec</string>
    <string name="str_check_box">check box</string>
    <string name="str_switch">switch</string>
</resources>
