<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <ImageView
        android:id="@+id/moj_image_view_id"
        android:contentDescription="@string/str_button_descr"
        android:src="@drawable/dobre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/moj_text_view_id"
        android:text="@string/str_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moj_image_view_id" />
    <Button
        android:id="@+id/moj_button_id"
        android:text="@string/str_button"
        android:onClick="buttonSendsMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moj_text_view_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageButton
        android:id="@+id/moj_image_button_id"
        android:contentDescription="@string/str_button_descr"
        android:src="@drawable/dobre"
        android:onClick="buttonSendsMessage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moj_button_id"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/moj_edit_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moj_image_button_id"
        android:layout_alignRight="@id/moj_image_button_id"
        android:layout_alignLeft="@id/moj_image_button_id" />
    <CheckBox
        android:id="@+id/moj_check_box_id"
        android:text="@string/str_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moj_edit_text_id"
        android:layout_alignRight="@id/moj_edit_text_id"
        android:layout_alignLeft="@id/moj_edit_text_id"/>
    <Switch
        android:id="@+id/moj_switch_id"
        android:text="@string/str_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moj_check_box_id" />
    <RadioGroup
        android:id="@+id/moj_redio_group_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moj_switch_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:text="New RadioButton1"
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="New RadioButton2"
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="New RadioButton3"
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

</RelativeLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal" >-->
    <!--<TextView-->
    <!--android:id="@+id/text_view_id"-->
    <!--android:text="@string/str_text_view"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content" />-->
    <!--<Button-->
    <!--android:id="@+id/button_id"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/str_button"-->
    <!--android:onClick="sendMessage" />-->
<!--</LinearLayout>-->